--- a/package.json
+++ b/package.json
@@ -210,6 +210,7 @@
     "jest": "^27.4.5",
     "lint-staged": "^12.1.4",
     "mini-css-extract-plugin": "^2.4.5",
+		"moment": ">=2.29.2",
     "opencollective-postinstall": "^2.0.3",
     "prettier": "^2.5.1",
     "react-refresh": "^0.11.0",
@@ -250,6 +251,7 @@
     "less": "^4.1.1",
     "less-loader": "^10.0.1",
     "minimist": ">=1.2.6",
+		"moment": ">=2.29.2",
     "mutex-promise": "^0.1.0",
     "node-forge": ">=1.3.0",
     "node-html-parser": "^4.1.5",
