--- a/package.json
+++ b/package.json
@@ -177,6 +177,7 @@
     "@types/webpack-env": "^1.16.3",
     "@typescript-eslint/eslint-plugin": "^5.8.1",
     "@typescript-eslint/parser": "^5.8.1",
+		"async": ">=2.6.4",
     "browserslist-config-erb": "^0.0.3",
     "chalk": "^4.1.2",
     "concurrently": "^6.5.1",
@@ -185,6 +186,7 @@
     "css-loader": "^6.5.1",
     "css-minimizer-webpack-plugin": "^3.3.1",
     "detect-port": "^1.3.0",
+		"ejs": ">=3.1.7",
     "electron": "^16.0.5",
     "electron-builder": "^23.0.0",
     "electron-devtools-installer": "^3.2.0",
